# rusty_mapper

./: .gitignore  AGENTS.md  APRILTAG_IMPLEMENTATION_SUMMARY.md  APRILTAG_MIGRATION_PLAN.md  ARUCO_DIAGNOSIS.md  Cargo.toml  DESIGN.md  DESIGN_GUI_LAYOUT.md  DESIGN_LOCAL_INPUT.md  DESIGN_LOCAL_OUTPUT.md  DESIGN_VIDEOWALL.md  PROGRESS.md  README.md  SETUP.md  VIDEO_WALL_READY.md  build.rs  config.toml
aruco-testbed/: Cargo.toml  README.md  RUST_OPTIONS.md  detect.py  generate.py  test_multi.py
aruco-testbed/examples/: apriltag_demo.rs
aruco-testbed/src/: detect.rs  generate.rs
examples/: README.md  aruco_display.rs  aruco_display_shader.wgsl  calibration_test.rs  videowall_render.rs
src/: app.rs  config.rs  lib.rs  main.rs
src/audio/: input.rs  mod.rs
src/core/: mod.rs  state.rs  vertex.rs
src/engine/: mod.rs  renderer.rs  texture.rs
src/engine/shaders/: main.wgsl
src/gui/: gui.rs  mod.rs  renderer.rs
src/input/: mod.rs  ndi.rs  syphon_input.rs  webcam.rs
src/ndi/: mod.rs  output.rs
src/output/: mod.rs  syphon.rs
src/videowall/: apriltag.rs  apriltag_auto_detect.rs  aruco.rs  calibration.rs  config.rs  grid_mapping.rs  matrix_renderer.rs  matrix_shader.wgsl  mod.rs  quad_mapper.rs  renderer.rs  shader.wgsl  test_pattern.rs
