[package]
name = "rusty_mapper"
version = "0.1.0"
edition = "2021"
authors = ["VJ Developer"]
description = "High-performance projection mapping application with NDI input/output"
license = "MIT"
repository = "https://github.com/yourusername/rusty_mapper"
keywords = ["projection-mapping", "ndi", "video", "wgpu", "real-time"]
categories = ["graphics", "multimedia"]

[dependencies]
# Windowing
winit = "0.30"

# Graphics - wgpu for cross-platform GPU acceleration
wgpu = { version = "25.0", features = ["spirv"] }
pollster = "0.3"  # For blocking on async operations

# Math and graphics
glam = { version = "0.29", features = ["bytemuck", "serde"] }
bytemuck = { version = "1.21", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# NDI (Network Device Interface) for video input/output
grafton-ndi = "0.11"

# Threading
crossbeam = "0.8"

# Audio processing
cpal = "0.15"
rustfft = "6.2"
realfft = "3.4"

# Video input (optional - disable if libclang not available)
nokhwa = { version = "0.10", features = ["input-native"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async and threading
tokio = { version = "1.42", features = ["rt-multi-thread", "sync"] }

# Logging and debugging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Time and scheduling
instant = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

# GUI - imgui for wgpu
imgui = "0.12"
imgui-wgpu = "0.25"
imgui-winit-support = "0.13"

# OpenCV for video wall calibration (optional feature)
opencv = { version = "0.92", default-features = false, features = ["aruco", "imgproc", "videoio"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
# Syphon (macOS GPU texture sharing)
syphon-core = { path = "../crates/syphon/syphon-core" }
syphon-wgpu = { path = "../crates/syphon/syphon-wgpu" }
metal = "0.29"
cocoa = "0.25"
objc = "0.2"
core-foundation = "0.10"
core-graphics = "0.24"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[features]
default = ["webcam"]
webcam = ["nokhwa"]
opencv = ["dep:opencv"]

[profile.dev]
opt-level = 1
