[package]
name = "aruco-testbed"
version = "0.1.0"
edition = "2024"

[workspace]

# Note: OpenCV crate is disabled due to OpenCV 4.13 incompatibility
# See RUST_OPTIONS.md for workarounds

# [dependencies]
# opencv = { version = "0.98", features = ["calib3d", "objdetect", "imgcodecs", "imgproc", "highgui"] }

# For AprilTag pure-Rust alternative:
# [dependencies]
# apriltag = "0.4"
# apriltag-image = "0.1"
# image = "0.25"

[[example]]
name = "apriltag_demo"
path = "examples/apriltag_demo.rs"
